kay-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_closed.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_closed
---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Selected model: GPT-5.4                                             | |
 |    Accounts           |  Last response model: waiting for a completed response               | |
 |    Agents             |  Reasoning effort: Medium                                            | |
 |    Prompts            |                                                                      | |
 |    Memories           |  Mode Settings                                                       | |
 |    Skills             |  Fast mode speeds up OpenAI replies. 1M Context is available on supp | |
 |    Auto Drive         |  › Fast Mode: disabled                                               | |
 |    Review             |    1M Context: auto                                                  | |
 |    Planning           |                                                                      | |
 |    Validation         |  ↑↓ Navigate  Enter Select  Esc Cancel                               | |
 |    Chrome             |                                                                      | |
 |  ↓ MCP                +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
