kay-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_open
---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Select+------------------------------+                              | |
 |    Accounts           |  Last r|Model Shortcuts               |pleted response               | |
 |    Agents             |  Reason|                              |                              | |
 |    Prompts            |        |• Esc    Return to overview   |                              | |
 |    Memories           |  Mode S|• Tab    Cycle sections       |                              | |
 |    Skills             |  Fast m|• Shift+Tab  Cycle backwards  | Context is available on supp | |
 |    Auto Drive         |  › Fast|• ?      Toggle this help     |                              | |
 |    Review             |    1M C|                              |                              | |
 |    Planning           |        |Press Esc to close            |                              | |
 |    Validation         |  ↑↓ Nav+------------------------------+                              | |
 |    Chrome             |                                                                      | |
 |  ↓ MCP                +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
