kay-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_overlay_overview_truncates.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +--------------------------------------------------------+
 |                           Kay                          |
 +--------------------------------------------------------+
 +Settings ▸ Overview-------------------------------------+
 |                                                        |
 | › Model              Model: GPT-5.4 (Medium)           |
 |   + Choose the language model used for new comp...     |
 |                                                        |
 |   Theme              Theme: Dark - Carbon Night · S... |
 |   + Switch between preset color palettes and ad...     |
 |                                                        |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help          |
 |                                                        |
 +--------------------------------------------------------+

 +--------------------------------------------------------+
 | What can I code for you today?                         |
 +--------------------------------------------------------+
 Read Only  (Shift+Tab change)   Ctrl+G editor  •  API key
